# tupann

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/data/: FI_datetimes-goes16_rrqpe-rj_small.txt  datetimes-goes16_rrqpe-rj.txt  datetimes-goes16_rrqpe-rj_sample.txt  datetimes[10:-1]-goes16_rrqpe-rj-.txt  goes16_rj_FI_darts_rain_events.yaml  goes16_rj_FI_lk_rain_events.yaml  goes16_rj_autoenc.yaml  goes16_tuppann_rj_rain_events_darts_paper.yaml  test_datetimes-goes16_rrqpe-rj-exclude_first=10-exclude_last=1.txt  test_datetimes[10:-18]-goes16_rrqpe-rj.txt  train_datetimes[10:-18]-goes16_rrqpe-rj.txt  train_datetimes[10:-1]-goes16_rrqpe-rj.txt  val_datetimes-goes16_rrqpe-rj-exclude_first=10-exclude_last=1.txt  val_datetimes[10:-18]-goes16_rrqpe-rj.txt
configs/eval/: goes16_eval_rio.yaml
configs/models/: autoenc_tupann.yaml  autoenc_tupann_image_loss.yaml  tupann.yaml  tupann_image_loss.yaml
data/rain_events/: goes16_rrqpe-rj.yaml  goes16_rrqpe-rj_sample.yaml
src/data/: dataset_handlers.py  download_goes16_rrqpe.sh  general_dataset.py
src/data/process/: SatelliteData.py  build_dataframe_from_sat.py  calc_rain_events.py  calc_rain_events_datetimes.py  calc_rain_events_datetimes_file.py  generate_split.py  process_data.py  process_satellite.py  save_intensities_and_motion_hdf.py
src/eval/eval_models_specs/: All_models_eval.json
src/eval/metrics/: csi_metrics.py  metrics.py
src/models/: lightning.py  predict.py  train.py
src/models/autoencoderklgan/: autoencoder_kl.py  lightning.py  lpipsWithDisc.py  misc.py
src/utils/: data_utils.py  dataframe_utils.py  general_utils.py  lightning_utils.py  model_utils.py  predict_utils.py  train_utils.py
(+37 files in other folders)
